fix: Fixed overflow y

--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,20 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: inherit;
-	letter-spacing: 0.1rem;
+	letter-spacing: 1px;
 	line-height: 1.5;
 }
 
 html {
-	/* font-size: 62.5%; */
 	font-size: 100%;
 }
 
 html,
-body {
-	min-height: 100%;
+body,
+#root,
+.App,
+.App > div {
+	height: 100%;
 }
 
 html,
@@ -25,12 +27,7 @@ body,
 	box-sizing: border-box;
 }
 
-#root {
-	height: 100vh;
-}
-
 .App {
-	height: 100%;
 	background-color: #444;
 	overflow: auto;
 }
