--- a/src/features/about/about.module.css
+++ b/src/features/about/about.module.css
@@ -22,6 +22,7 @@
 	text-align: justify;
 	font-size: 1.5rem;
 	margin: 0;
+	padding: 0 2rem;
 }
 .span {
 	font-size: 1.8rem;
@@ -35,6 +36,7 @@
 @media screen and (min-width: 600px) and (max-width: 900px) {
 	.AboutContainer {
 		gap: 0;
+		overflow-y: auto;
 	}
 
 	.heading {
@@ -52,6 +54,7 @@
 @media screen and (max-width: 599px) {
 	.AboutContainer {
 		gap: 0;
+		overflow-y: auto;
 	}
 
 	.heading {
@@ -62,5 +65,6 @@
 	.text {
 		font-size: 1.3rem;
 		margin-bottom: 1rem;
+		padding: 0;
 	}
 }
