--- a/src/features/contact/Contact.module.css
+++ b/src/features/contact/Contact.module.css
@@ -4,7 +4,6 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	height: 100%;
 }
 
 .heading {
@@ -75,7 +74,7 @@
 
 	.contactMailItem:active::after {
 		content: "Copied to Clipboard";
-		font-size: 2rem;
+		font-size: 1.5rem;
 		color: #99e6ff;
 		cursor: pointer;
 	}
