--- a/src/features/home/home.module.css
+++ b/src/features/home/home.module.css
@@ -31,7 +31,6 @@
 /* PAGE */
 
 .home {
-	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
