--- a/src/features/projects/intro_WouldYouRather/introWouldYouRather.module.css
+++ b/src/features/projects/intro_WouldYouRather/introWouldYouRather.module.css
@@ -95,6 +95,10 @@
 /***** Tablet ****/
 
 @media screen and (min-width: 600px) and (max-width: 900px) {
+	.wouldYouRatherContainer {
+		overflow-y: auto;
+	}
+
 	.heading {
 		font-size: 4rem;
 	}
@@ -106,6 +110,10 @@
 
 /***** Mobile ****/
 @media screen and (max-width: 599px) {
+	.wouldYouRatherContainer {
+		overflow-y: auto;
+	}
+
 	.heading {
 		font-size: 3.5rem;
 	}
